--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,9 +1,21 @@
-source.. = src/
-output.. = target/
+source.. = src/main/java/,\
+           src/main/resources/,\
+           src/test/java/,\
+           src/test/resources/
+output.. = target/classes/
 bin.includes = plugin.xml,\
-               META-INF/,\
-               .,\
-               icons/,\
+               Application.e4xmi,\
+               smapper.plugin1.product,\
                splash.bmp,\
-			   images,\
-               libs			   
+               plugin_customization.ini,\
+               META-INF/MANIFEST.MF,\
+               META-INF/log4j.properties,\
+               about.html,\
+               css/,\
+               icons/,\
+               images/,\
+               libs/,\
+               META-INF/,\
+               pom.xml
+src.includes = smapper.plugin1.product,\
+               about.html,\
