--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,17 +1,3 @@
-###############################################################################
-# Copyright (c) 2016 IBM Corporation and others.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#     IBM Corporation - initial API and implementation
-###############################################################################
-source.. = src/main/java/,\
-           src/main/resources/,\
-           src/test/java/,\
-           src/test/resources/
 output.. = target/classes/
 bin.includes = plugin.xml,\
                Application.e4xmi,\
@@ -26,6 +12,11 @@ bin.includes = plugin.xml,\
                images/,\
                libs/,\
                META-INF/,\
-               pom.xml
+               pom.xml,\
+               css/default.css
 src.includes = smapper.plugin1.product,\
-               about.html,\
+               about.html
+source.. = src/main/java/,\
+           src/main/resources/,\
+           src/test/java/,\
+           src/test/resources/
