--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -13,9 +13,17 @@ bin.includes = plugin.xml,\
                libs/,\
                META-INF/,\
                pom.xml,\
-               css/default.css
+               css/default.css,\
+               libs/log4j-1.2.16.jar,\
+               libs/slf4j-log4j12-1.6.0.jar
+jars.compile.order = .
 src.includes = smapper.plugin1.product,\
-               about.html
+               about.html,\
+               src/main/,\
+               src/test/,\
+               icons/,\
+               images/,\
+               css/
 source.. = src/main/java/,\
            src/main/resources/,\
            src/test/java/,\
