--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,30 +1,24 @@
-output.. = target/classes/
-bin.includes = plugin.xml,\
-               Application.e4xmi,\
-               smapper.plugin1.product,\
-               splash.bmp,\
-               plugin_customization.ini,\
-               META-INF/MANIFEST.MF,\
-               META-INF/log4j.properties,\
-               about.html,\
-               css/,\
-               icons/,\
-               images/,\
-               libs/,\
+source.. = src/
+bin.includes = css/,\
+               resources/,\
                META-INF/,\
+               splash.bmp,\
                pom.xml,\
-               css/default.css,\
-               libs/log4j-1.2.16.jar,\
-               libs/slf4j-log4j12-1.6.0.jar
-jars.compile.order = .
-src.includes = smapper.plugin1.product,\
+               plugin_customization.ini,\
+               plugin.xml,\
                about.html,\
-               src/main/,\
-               src/test/,\
                icons/,\
                images/,\
-               css/
-source.. = src/main/java/,\
-           src/main/resources/,\
-           src/test/java/,\
-           src/test/resources/
+               epl-v10.html,\
+               Application.e4xmi,\
+               libs/commons-io-2.4.jar,\
+               libs/log4j-1.2.16.jar,\
+               libs/slf4j-api-1.6.0.jar,\
+               libs/slf4j-log4j12-1.6.0.jar
+src.includes = css/,\
+               pom.xml,\
+               resources/,\
+               splash.bmp,\
+               icons/,\
+               images/
+
