--- a/smapper.build/pom.xml
+++ b/smapper.build/pom.xml
@@ -68,6 +68,11 @@
 					<artifactId>tycho-p2-repository-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
+				<plugin>
+				  <groupId>org.eclipse.tycho</groupId>
+				  <artifactId>tycho-compiler-plugin</artifactId>
+				  <version>${tycho-version}</version>
+				</plugin>				
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -89,7 +94,7 @@
 									<version>3.3.9</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>1.8</version>
+									<version>${maven.compiler.source}</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
@@ -106,7 +111,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<encoding>${encoding}</encoding>
-					<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+					<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
 				</configuration>
@@ -159,26 +164,11 @@
 					</baselineRepositories>
 				</configuration>
 			</plugin>
-			
-			<plugin>
-			    <!-- Use compiler plugin with tycho as the adapter to the JDT compiler. -->
-			    <artifactId>maven-compiler-plugin</artifactId>
-			    <configuration>
-			        <source>${maven.compiler.source}</source>
-			        <target>${maven.compiler.target}</target>
-			        <compilerId>jdt</compilerId>
-			        <compilerArgument>-err:nullAnnot,null</compilerArgument> <!-- insert your warn/err configuration here -->
-			    </configuration>
-			    <dependencies>
-			        <!-- This dependency provides the implementation of compiler "jdt": -->
-			        <dependency>
-			            <groupId>org.eclipse.tycho</groupId>
-			            <artifactId>tycho-compiler-jdt</artifactId>
-			            <version>${tycho-version}</version>
-			        </dependency>
-			    </dependencies>
-			</plugin>			
-						
+		  <plugin>
+			<groupId>${tycho-groupid}</groupId>
+			<artifactId>tycho-compiler-plugin</artifactId>
+			<version>${tycho-version}</version>
+		  </plugin>						
 			
 		</plugins>
 	</build>
