--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,6 +1,7 @@
-source.. = src/
+source.. = src/main/java/,\
+           src/test/java/
+output.. = target/classes/
 bin.includes = css/,\
-               resources/,\
                META-INF/,\
                splash.bmp,\
                pom.xml,\
@@ -17,7 +18,6 @@ bin.includes = css/,\
                libs/slf4j-log4j12-1.6.0.jar
 src.includes = css/,\
                pom.xml,\
-               resources/,\
                splash.bmp,\
                icons/,\
                images/
