--- a/smapper.plugin1/plugin.xml
+++ b/smapper.plugin1/plugin.xml
@@ -1,14 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    Copyright (c) 2016 IBM Corporation and others.
-    All rights reserved. This program and the accompanying materials
-    are made available under the terms of the Eclipse Public License v1.0
-    which accompanies this distribution, and is available at
-    http://www.eclipse.org/legal/epl-v10.html
-   
-    Contributors:
-        IBM Corporation - initial API and implementation
- -->
 
 <plugin>
    <extension
@@ -36,50 +26,6 @@
             ssss description body text
          </description>
       </perspective>
-   </extension>
-   <extension
-         id="products.ext.product"
-         point="org.eclipse.core.runtime.products">
-      <product
-            application="org.eclipse.e4.ui.workbench.swt.E4Application"
-            name="Product for smapper">
-         <property
-               name="appName"
-               value="Product for smapper">
-         </property>
-         <property
-               name="applicationCSS"
-               value="platform:/plugin/smapper.plugin1/css/default.css">
-         </property>
-         <property
-               name="aboutImage"
-               value="icons/128x128.gif">
-         </property>
-         <property
-               name="aboutText"
-               value="(c) Iakov Senatov">
-         </property>
-         <property
-               name="windowImages"
-               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
-         </property>
-         <property
-               name="startupForegroundColor"
-               value="8080FF">
-         </property>
-         <property
-               name="startupMessageRect"
-               value="7,252,445,20">
-         </property>
-         <property
-               name="startupProgressRect"
-               value="5,275,445,15">
-         </property>
-         <property
-               name="preferenceCustomization"
-               value="plugin_customization.ini">
-         </property>
-      </product>
    </extension>
    <extension
          id="smapper.ext.intro"
@@ -111,90 +57,14 @@
       </config>
    </extension>
    <extension
-         id="smapper.ext.runtime.product"
-         point="org.eclipse.core.runtime.products">
-      <product
-            application="org.eclipse.e4.ui.workbench.swt.E4Application"
-            name="Product for smapper">
-         <property
-               name="windowImages"
-               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
-         </property>
-         <property
-               name="aboutText"
-               value="(c) Iakov Senatov">
-         </property>
-         <property
-               name="aboutImage"
-               value="icons/128x128.gif">
-         </property>
-         <property
-               name="startupForegroundColor"
-               value="8080FF">
-         </property>
-         <property
-               name="startupProgressRect"
-               value="5,275,445,15">
-         </property>
-         <property
-               name="startupMessageRect"
-               value="7,252,445,20">
-         </property>
-         <property
-               name="applicationCSS"
-               value="platform:/plugin/smapper.plugin1/css/default.css">
-         </property>
-         <property
-               name="appName"
-               value="Product for smapper">
-         </property>
-         <property
-               name="preferenceCustomization"
-               value="plugin_customization.ini">
-         </property>
-      </product>
-   </extension>
-   <extension
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
             application="org.eclipse.e4.ui.workbench.swt.E4Application"
-            name="Product for smapper">
-         <property
-               name="windowImages"
-               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
-         </property>
-         <property
-               name="aboutText"
-               value="(c) Iakov Senatov">
-         </property>
-         <property
-               name="aboutImage"
-               value="icons/128x128.gif">
-         </property>
-         <property
-               name="startupForegroundColor"
-               value="8080FF">
-         </property>
-         <property
-               name="startupProgressRect"
-               value="5,275,445,15">
-         </property>
-         <property
-               name="startupMessageRect"
-               value="7,252,445,20">
-         </property>
-         <property
-               name="applicationCSS"
-               value="platform:/plugin/smapper.plugin1/css/default.css">
-         </property>
+            name="Smapper">
          <property
                name="appName"
-               value="Product for smapper">
-         </property>
-         <property
-               name="preferenceCustomization"
-               value="plugin_customization.ini">
+               value="Smapper">
          </property>
       </product>
    </extension>
