--- a/smapper.build/pom.xml
+++ b/smapper.build/pom.xml
@@ -1,14 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    Copyright (c) 2016 IBM Corporation and others.
-    All rights reserved. This program and the accompanying materials
-    are made available under the terms of the Eclipse Public License v1.0
-    which accompanies this distribution, and is available at
-    http://www.eclipse.org/legal/epl-v10.html
-   
-    Contributors:
-        IBM Corporation - initial API and implementation
- -->
 
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
@@ -69,10 +59,15 @@
 					<version>${tycho-version}</version>
 				</plugin>
 				<plugin>
-				  <groupId>org.eclipse.tycho</groupId>
-				  <artifactId>tycho-compiler-plugin</artifactId>
-				  <version>${tycho-version}</version>
-				</plugin>				
+					<groupId>${tycho-groupid}</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho-version}</version>
+				</plugin>
+		        <plugin>
+		          <groupId>${tycho-groupid}</groupId>
+		          <artifactId>tycho-packaging-plugin</artifactId>
+		          <version>${tycho-version}</version>
+		        </plugin>				
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -164,12 +159,12 @@
 					</baselineRepositories>
 				</configuration>
 			</plugin>
-		  <plugin>
-			<groupId>${tycho-groupid}</groupId>
-			<artifactId>tycho-compiler-plugin</artifactId>
-			<version>${tycho-version}</version>
-		  </plugin>						
-			
+			<plugin>
+				<groupId>${tycho-groupid}</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>${tycho-version}</version>
+			</plugin>
+
 		</plugins>
 	</build>
 	<modules>
