--- a/smapper.plugin1/plugin.xml
+++ b/smapper.plugin1/plugin.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin>
-   <extension
-         id="smapper.plugin1"
+     <extension
+         id="smapper"
          point="org.eclipse.core.runtime.applications">
       <application
             cardinality="singleton-global"
-            icon="$nl$/icons/32x32.gif"
+            icon="icons/32x32.gif"
             thread="main"
             visible="true">
          <run
@@ -15,11 +15,11 @@
       </application>
    </extension>
    <extension
-         id="smapper.perspective"
+         id="perspective"
          point="org.eclipse.ui.perspectives">
       <perspective
             class="com.senatov.smapper.bundle.PerspectiveFactory1"
-            icon="$nl$/icons/128x128.gif"
+            icon="icons/128x128.gif"
             id="com.senatov.smapper.bundle.perspective1"
             name="Just Perspective">
          <description>
@@ -61,11 +61,28 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="org.eclipse.e4.ui.workbench.swt.E4Application"
-            name="Smapper">
+            name="Product for smapper">
          <property
                name="appName"
-               value="Smapper">
+               value="Product for smapper">
+         </property>
+         <property
+               name="applicationCSS"
+               value="platform:/plugin/smapper.plugin1/css/default.css">
+         </property>
+         <property
+               name="aboutImage"
+               value="icons/256x256.gif">
+         </property>
+         <property
+               name="aboutText"
+               value="(c) Iakov Senatov">
+         </property>
+         <property
+               name="windowImages"
+               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
          </property>
       </product>
+
    </extension>
 </plugin>
