--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,5 +1,3 @@
-source.. = src/main/java/,\
-           src/test/java/
 output.. = target/classes/
 bin.includes = css/,\
                META-INF/,\
@@ -15,10 +13,14 @@ bin.includes = css/,\
                libs/commons-io-2.4.jar,\
                libs/log4j-1.2.16.jar,\
                libs/slf4j-api-1.6.0.jar,\
-               libs/slf4j-log4j12-1.6.0.jar
+               libs/slf4j-log4j12-1.6.0.jar,\
+               css/default.css
 src.includes = css/,\
                pom.xml,\
                splash.bmp,\
                icons/,\
                images/
-
+source.. = src/main/java/,\
+           src/main/resources/,\
+           src/test/resources/,\
+           src/test/java/
