--- a/smapper.plugin1/plugin.xml
+++ b/smapper.plugin1/plugin.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin>
-     <extension
-         id="smapper"
+   <extension
+         id="cmapper_app_id"
          point="org.eclipse.core.runtime.applications">
       <application
             cardinality="singleton-global"
-            icon="icons/32x32.gif"
+            icon="icons/32x32.bmp"
             thread="main"
             visible="true">
          <run
-               class="com.senatov.smapperApp.Activator">
+               class="com.senatov.smapperApp.Application">
          </run>
       </application>
    </extension>
    <extension
-         id="perspective"
+         id="perspective_id"
          point="org.eclipse.ui.perspectives">
       <perspective
             class="com.senatov.smapper.bundle.PerspectiveFactory1"
             icon="icons/128x128.gif"
-            id="com.senatov.smapper.bundle.perspective1"
+            id="perspective1_id"
             name="Just Perspective">
          <description>
             ssss description body text
@@ -28,26 +28,25 @@
       </perspective>
    </extension>
    <extension
-         id="smapper.ext.intro"
+         id="cust_intro_part_id"
          point="org.eclipse.ui.intro">
       <intro
             class="org.eclipse.ui.intro.config.CustomizableIntroPart"
-            id="smapper.plugin1.intro">
+            icon="icons/16x16-8.bmp"
+            id="intro_id"
+            label="introduction probeweise">
       </intro>
-      <introProductBinding
-            introId="smapper.plugin1.intro"
-            productId="smapper.plugin1.product">
-      </introProductBinding>
    </extension>
    <extension
-         id="smapper.ext.intro.config"
+         id="config_id"
          point="org.eclipse.ui.intro.config">
       <config
             content="introContent.xml"
-            id="smapper.plugin1.introConfigId"
-            introId="smapper.plugin1.intro">
+            id="introConfig_Id"
+            introId="intro_id">
          <presentation
-               home-page-id="root">
+               home-page-id="intro_config_root_id"
+               standby-page-id="standby_page_id">
             <implementation
                   kind="html"
                   os="win32,linux,macosx"
@@ -57,7 +56,8 @@
       </config>
    </extension>
    <extension
-         id="product"
+         id="products_id"
+         name="products name probeweise"
          point="org.eclipse.core.runtime.products">
       <product
             application="org.eclipse.e4.ui.workbench.swt.E4Application"
@@ -86,10 +86,39 @@
 
    </extension>
    <extension
+         id="splash_handler_id"
          point="org.eclipse.ui.splashHandlers">
       <splashHandler
             class="smapper.plugin1.splashHandlers.InteractiveSplashHandler"
-            id="smapper.plugin1.splashHandlers.interactive">
+            id="interactiveSplash_id">
       </splashHandler>
+   </extension>
+   <extension
+         id="product"
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="org.eclipse.e4.ui.workbench.swt.E4Application"
+            name="Product for smapper">
+         <property
+               name="windowImages"
+               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
+         </property>
+         <property
+               name="aboutText"
+               value="(c) Iakov Senatov">
+         </property>
+         <property
+               name="aboutImage"
+               value="icons/128x128.gif">
+         </property>
+         <property
+               name="applicationCSS"
+               value="platform:/plugin/smapper.plugin1/css/default.css">
+         </property>
+         <property
+               name="appName"
+               value="Product for smapper">
+         </property>
+      </product>
    </extension>
 </plugin>
