wow! it works (run, log4j, maven, no errors)

--- a/smapper.plugin1/plugin.xml
+++ b/smapper.plugin1/plugin.xml
@@ -2,7 +2,7 @@
 
 <plugin>
    <extension
-         id="cmapper_app_id"
+         id="application"
          point="org.eclipse.core.runtime.applications">
       <application
             cardinality="singleton-global"
