--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -9,12 +9,13 @@ bin.includes = css/,\
                icons/,\
                images/,\
                epl-v10.html,\
-               Application.e4xmi,\
                libs/commons-io-2.4.jar,\
                libs/log4j-1.2.16.jar,\
                libs/slf4j-api-1.6.0.jar,\
                libs/slf4j-log4j12-1.6.0.jar,\
-               css/default.css
+               css/default.css,\
+               introContent.xml,\
+               content/
 src.includes = css/,\
                pom.xml,\
                splash.bmp,\
