--- a/smapper.plugin1/plugin.xml
+++ b/smapper.plugin1/plugin.xml
@@ -15,12 +15,11 @@
       </application>
    </extension>
    <extension
-         id="perspective_id"
          point="org.eclipse.ui.perspectives">
       <perspective
-            class="com.senatov.smapperApp.PerspectiveFactory1"
-            icon="$nl$/icons/128x128.gif"
-            id="perspective1_id"
+            class="com.senatov.smapperApp.Perspective"
+            icon="icons/128x128.gif"
+            id="smapper.perspective1"
             name="Perspective proveweise">
          <description>
             ssss description body text
@@ -28,57 +27,7 @@
       </perspective>
    </extension>
    <extension
-         id="cust_intro_part_id"
-         point="org.eclipse.ui.intro">
-      <intro
-            class="org.eclipse.ui.intro.config.CustomizableIntroPart"
-            icon="$nl$/icons/16x16-8.bmp"
-            id="intro_id"
-            label="introduction probeweise">
-      </intro>
-      <intro
-            class="org.eclipse.ui.intro.config.CustomizableIntroPart"
-            id="smapper.plugin1.intro">
-      </intro>
-      <introProductBinding
-            introId="smapper.plugin1.intro"
-            productId="smapper.plugin1.product">
-      </introProductBinding>
-   </extension>
-   <extension
-         id="config_id"
-         point="org.eclipse.ui.intro.config">
-      <config
-            content="introContent.xml"
-            id="introConfig_Id"
-            introId="intro_id">
-         <presentation
-               home-page-id="intro_config_root_id"
-               standby-page-id="standby_page_id">
-            <implementation
-                  kind="html"
-                  os="win32,linux,macosx"
-                  style="content/shared.css">
-            </implementation>
-         </presentation>
-      </config>
-      <config
-            content="introContent.xml"
-            id="smapper.plugin1.introConfigId"
-            introId="smapper.plugin1.intro">
-         <presentation
-               home-page-id="root">
-            <implementation
-                  kind="html"
-                  os="win32,linux,macosx"
-                  style="content/shared.css">
-            </implementation>
-         </presentation>
-      </config>
-   </extension>
-   <extension
          id="product"
-         name="Smapper"
          point="org.eclipse.core.runtime.products">
       <product
             application="smapper.plugin1.application"
@@ -105,6 +54,31 @@
          </property>
       </product>
 
+   </extension>
+   <extension
+         point="org.eclipse.ui.intro">
+      <intro
+            class="org.eclipse.ui.intro.config.CustomizableIntroPart"
+            id="smapper.plugin1.intro1">
+      </intro>
+      <introProductBinding
+            introId="smapper.plugin1.intro1"
+            productId="smapper.plugin1.product">
+      </introProductBinding>
+   </extension>
+   <extension
+         point="org.eclipse.ui.intro.config">
+      <config
+            content="introContent.xml"
+            id="smapper.plugin1.config1"
+            introId="smapper.plugin1.intro1">
+         <presentation
+               home-page-id="smapper.plugin1.presentation1">
+            <implementation
+                  kind="swt">
+            </implementation>
+         </presentation>
+      </config>
    </extension>
    <extension
          id="splash_handler_id"
@@ -141,5 +115,12 @@
                value="Product for smapper">
          </property>
       </product>
+   </extension>
+   <extension
+         point="org.eclipse.ui.intro.configExtension">
+      <configExtension
+            configId="smapper.plugin1.config1"
+            content="ext.xml">
+      </configExtension>
    </extension>
 </plugin>
